--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body, html{
     
     position: -webkit-sticky; /* Safari */
     position: fixed;
-    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3), 0 8px 24px 0 rgba(0, 0, 0, 0.25);
 }
 a{
     color: white;
@@ -45,12 +44,13 @@ a{
     
     position: -webkit-sticky; /* Safari */
     position: fixed;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .right{
     float: right;
     width: 60%;
-    
+    height: 90vh;
 }
 
 .info{
@@ -67,6 +67,7 @@ a{
     .info img{
         width: 80%;
         border-radius: 50%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
     .info h1{
@@ -93,6 +94,7 @@ a{
     }
         .nav li a:hover{
             cursor: pointer;
+            text-shadow: 2px 2px rgba(255, 255, 255, 0.3);
         }
 
 .socialmedia{
@@ -103,6 +105,9 @@ a{
         margin: 1vw;
         width: 3vw;
     }
+        .socialmedia img:hover{
+            box-shadow: 0 6px 10px 0 rgba(255, 255, 255, 0.5), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
+        }
 
 .content{    
     height: 90%;
@@ -121,15 +126,15 @@ a{
     }
 
 .projectwindow{
-    width: 25%;
+    width: 30%;
     float: left;
-    margin: 4%;
+    margin: 1%;
     
 }
 
     .projectwindow img{
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        width: 80%;
+        width: 90%;
         margin: 0px;
         padding: 0px;
         border-radius: 10%;
@@ -179,6 +184,8 @@ a{
     width: 20%;
     display: none;
     position: absolute;
+    margin-bottom: 10%;
+    border: 1px 1px white;
 }
 .footer {
     position: fixed;
@@ -274,5 +281,6 @@ a{
     .back{
         display: block;
         position: static;
+        border: 1px 1px white;
     }
 }
