--- a/style.css
+++ b/style.css
@@ -192,7 +192,6 @@ a{
     text-align: center;
     margin-left: 40%;
     top: 0;
-    bottom: 0;
     padding: 1%;
     font-size: 2vw;
     width: 20%;
@@ -214,27 +213,15 @@ a{
     font-size: 0.9vw;
 }
 
-.introduction {
-	height: 60%;
-	width: 40%;
-	margin-top: 2%;
-	margin-left: -20%;
-	top: 40%;
-	left: 50%;
-	text-align: center;
-}
-
 .contact{
-    top: 20%;
+    margin-top: 10%;
     height: 60%;
-    width: 40%;
-    position: fixed;
-    margin-left: -20%;
+    width: 80%;
+    margin-left: 10%;
     Box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding: 5px;
 }
     .contact h1{
-        margin-bottom: 50px;
+        margin-bottom: 2%;
     }
 .contactline{
     width: 90%;
@@ -243,11 +230,11 @@ a{
 }
     .contactline img{
         float: left;
-        height: 60px;
+        width: 10%;
     }
 
     .contactline h4{
-        width: 50%;
+        width: 90%;
         float: right;
     }
 
