--- a/style.css
+++ b/style.css
@@ -216,8 +216,8 @@ a{
 .contact{
     margin-top: 10%;
     height: 60%;
-    width: 80%;
-    margin-left: 10%;
+    width: 40%;
+    margin-left: 30%;
     Box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
     .contact h1{
@@ -287,6 +287,11 @@ a{
         display: block;
         position: static;
         border: 1px solid white;
+    }
+    
+    .contact{
+        width: 80%;
+        margin-left: 10%;
     }
     
 }
