--- a/style.css
+++ b/style.css
@@ -188,6 +188,10 @@ a{
     box-shadow: 0 6px 10px 0 rgba(255, 255, 255, 0.5), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
     text-shadow: 1px 1px black;
 }
+
+.projectbtn{
+    float: left;
+}
 .back{
     text-align: center;
     margin-left: 40%;
